dev/lb/yaml/cilium_gw.yaml
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: public-gw
# spec:
#   gatewayClassName: cilium
#   listeners:
#   - protocol: HTTP
#     port: 80
#     name: web-gw
#     allowedRoutes:
#       namespaces:
#         from: All
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: public-gw
# spec:
#   parentRefs:
#   - name: public-gw
#     namespace: default
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /healthcheck
#     backendRefs:
#     - name: healthcheck-global
#       port: 80
#
# ---
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gw
spec:
  addresses:
    - type: IPAddress
      value: 10.10.141.10
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: web-gw
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app-1
spec:
  parentRefs:
  - name: public-gw
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /healthcheck
    backendRefs:
    - name: healthcheck-global-service
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /kafka/ui
    backendRefs:
    - name: kafka-ui-service
      port: 8080
